--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Server for SocialApp project",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js"
+		"start": "nodemon server.js",
+		"build": "CI=false && webpack --config webpack.config.js"
 	},
 	"author": "Aakash Jha",
 	"license": "ISC",
@@ -18,8 +19,14 @@
 		"multer": "^1.4.3"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.16.0",
+		"@babel/preset-env": "^7.16.4",
+		"babel-loader": "^8.2.3",
+		"babel-polyfill": "^6.26.0",
+		"clean-webpack-plugin": "^4.0.0",
 		"nodemon": "^2.0.15",
 		"webpack": "^5.64.2",
-		"webpack-cli": "^4.9.1"
+		"webpack-cli": "^4.9.1",
+		"webpack-node-externals": "^3.0.0"
 	}
 }
