--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "Server for SocialApp project",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js",
+		"start": "node build/main-*.js",
+		"dev": "nodemon server.js",
 		"build": "CI=false && webpack --config webpack.config.js"
 	},
 	"author": "Aakash Jha",
